--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   var randomNumber = Math.floor(Math.random()) + 1;
   var guesses = document.querySelector('.guesses');
   var lastResult = document.querySelector('.lastResult');
-  var lowOrHi = document.querySelector('lowOrHi');
+  var lowOrHi = document.querySelector('.lowOrHi');
   var guessSubmit = document.querySelector('.guessSubmit');
   var guessField = document.querySelector('.guessField');
   var guessCount = 1;
