Add debug output for RNGs

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 <script>
   var randomNumber = Math.floor(Math.random()*100) + 1;
+  console.log('debug: RNG: ' + randomNumber);
   var guesses = document.querySelector('.guesses');
   var lastResult = document.querySelector('.lastResult');
   var lowOrHi = document.querySelector('.lowOrHi');
@@ -107,6 +108,7 @@
 	  lastResult.style.backgroundColor = 'white';
 	
 	  randomNumber = Math.floor(Math.random()*100) + 1;
+	  console.log('debug: RNG: ' + randomNumber);
   }
 </script>
 </html>
